--- a/dev/ras_dir_scrape.ipynb
+++ b/dev/ras_dir_scrape.ipynb
@@ -481,15 +481,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'.\\\\Terrain\\\\Amite_Dec15.hdf'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# open plan hdf file\n",
+    "import h5py\n",
+    "with h5py.File(r\"Z:\\Amite\\Amite_LWI\\Models\\Amite_RAS\\Amite_20200114.p07.hdf\", \"r\") as f:\n",
+    "    terrain = f['Geometry'].attrs['Terrain Filename'].decode('UTF-8')\n",
+    "\n",
+    "terrain\n",
+    "    \n",
+    "    # f['Geometry']['Terrain Filename']"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "flask-forms",
+   "display_name": "hec_meta",
    "language": "python",
    "name": "python3"
   },
@@ -508,7 +528,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "990a51e6637b3aec83bdfd68488de192c6aff3f5a8661c0fcf7fce7c40ea5ab0"
+    "hash": "76ecb9a863def9b21f44032a5e87e3ce48447e177fd90c9ddac9401b285a34c6"
    }
   }
  },
