simulation to json dev notebook complete. TODO implement to main parser .py

--- a/dev/ras_yaml_to_json_model_app.ipynb
+++ b/dev/ras_yaml_to_json_model_app.ipynb
@@ -11,7 +11,7 @@
     "import json\n",
     "import yaml\n",
     "\n",
-    "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\model_application_63daf3b5fc7bb57794588acb (3).json\", 'r') as f:\n",
+    "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\ras_model_application.json\", 'r') as f:\n",
     "    ras_model_template_json = json.load(f)\n",
     "\n",
     "# type(ras_model_template_json)\n",
@@ -75,7 +75,7 @@
    "source": [
     "# output mapped json\n",
     "with open(\"out.json\", \"w\") as outfile:\n",
-    "    json.dump(ras_model_template_json, indent=4, outfile)"
+    "    json.dump(ras_model_template_json, outfile)"
    ]
   }
  ],
