confirmed dev simulation json maker working on web app.

--- a/dev/ras_yaml_to_json_sim.ipynb
+++ b/dev/ras_yaml_to_json_sim.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
     "# print(ras_model_template_json.keys())\n",
     "\n",
     "# keys to drop\n",
-    "drop_keys = ['_id', 'model_software', 'parameters', 'linked_resources', 'type', 'output_files']\n",
+    "drop_keys = ['_id', 'model_software', 'model_application', 'parameters', 'linked_resources', 'type', 'output_files']\n",
     "\n",
     "for key in drop_keys:\n",
     "    del ras_sim_template_json[key]"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +67,7 @@
        "'f{prj_name}.b{p_num}'"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +83,12 @@
     "prj_name = prj_file_tail.split(\".\")[0]\n",
     "# prj_name\n",
     "b_file = 'f{prj_name}.b{p_num}'\n",
-    "b_file\n"
+    "# b_file\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
        " 'Observed Time Series=Stage|TS DSS Filename=.\\\\BC_Extended\\\\PortVincent_AmiteGage_15min.dss']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,12 +114,12 @@
     "dss_input_file_list = [el[0] for el in p_yaml['DSS Input Files']]\n",
     "# dss_input_file_list\n",
     "list_unique = list(set(dss_input_file_list))\n",
-    "list_unique"
+    "# list_unique"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "  'source_dataset': None}]"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,12 +272,12 @@
     "            \"source_dataset\": None\n",
     "        }]\n",
     ")\n",
-    "input_files"
+    "# input_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
