fully implemented json simulation output.

--- a/dev/ras_yaml_to_json_sim.ipynb
+++ b/dev/ras_yaml_to_json_sim.ipynb
@@ -14,9 +14,6 @@
     "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\ras_simulation.json\", 'r') as f:\n",
     "    ras_sim_template_json = json.load(f)\n",
     "\n",
-    "# type(ras_model_template_json)\n",
-    "# print(ras_model_template_json.keys())\n",
-    "\n",
     "# keys to drop\n",
     "drop_keys = ['_id', 'model_software', 'model_application', 'parameters', 'linked_resources', 'type', 'output_files']\n",
     "\n",
@@ -78,12 +75,8 @@
     "g_num = p_yaml['Geom File'][1:]\n",
     "u_num = p_yaml['Flow File'][1:]\n",
     "\n",
-    "# prj_name = p_yaml_fn.split(\".\")[-3]\n",
     "prj_dir, prj_file_tail = os.path.split(p_yaml_fn)\n",
-    "prj_name = prj_file_tail.split(\".\")[0]\n",
-    "# prj_name\n",
-    "b_file = 'f{prj_name}.b{p_num}'\n",
-    "# b_file\n"
+    "prj_name = prj_file_tail.split(\".\")[0]"
    ]
   },
   {
@@ -109,12 +102,8 @@
    ],
    "source": [
     "# Get Unique input DSS files\n",
-    "# p_yaml['DSS Input Files']\n",
-    "\n",
     "dss_input_file_list = [el[0] for el in p_yaml['DSS Input Files']]\n",
-    "# dss_input_file_list\n",
-    "list_unique = list(set(dss_input_file_list))\n",
-    "# list_unique"
+    "list_unique = list(set(dss_input_file_list))"
    ]
   },
   {
@@ -281,20 +270,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Map\n",
-    "\n",
-    "# ras_model_template_json['title'] = prj_yaml['Proj Title']\n",
-    "# ras_model_template_json['description'] = prj_yaml['Description']\n",
-    "# ras_model_template_json['purpose'] = prj_yaml['Description']\n",
-    "# ras_model_template_json['simulations'] = prj_yaml['Plans']\n",
-    "# ras_model_template_json['grid']['coordinate_system'] = prj_yaml['coordinate_system']\n",
-    "# ras_model_template_json['spatial_extent'][0] = prj_yaml['spatial_extent']\n",
-    "# ras_model_template_json['common_files_details'][0] = {\n",
-    "#     'source_dataset': None,\n",
-    "#     'description': 'RAS project file which links projects with plans, geometry, and flow files',\n",
-    "#     'location': prj_yaml['Project File'],\n",
-    "#     'title': 'prj file'\n",
-    "# }\n",
+    "# Map from yaml format to json format\n",
     "\n",
     "ras_sim_template_json['title'] = p_yaml['Plan Title']\n",
     "ras_sim_template_json['description'] = p_yaml['Description']\n",
