bug fix in ras parser, hms parser still in dev

--- a/dev/hms/hms_parser.ipynb
+++ b/dev/hms/hms_parser.ipynb
@@ -2,248 +2,31 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Project: Amite HMS',\n",
-       " '     Description: Includes main models from TWIF Amite Study Jan112021',\n",
-       " '     Version: 4.10',\n",
-       " '     Filepath Separator: \\\\',\n",
-       " '     DSS File Name: Amite_HMS.dss',\n",
-       " '     Time Zone ID: America/Chicago',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Precipitation: Specified Hyetographs',\n",
-       " '     Filename: Specified_Hyetographs.met',\n",
-       " '     Description: Processed from Stage IV Gridded Data',\n",
-       " '     Last Modified Date: 13 January 2023',\n",
-       " '     Last Modified Time: 16:49',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Aug2016 Cali wET',\n",
-       " '     Filename: Aug2016_Cali_wET.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2023',\n",
-       " '     Last Modified Time: 17:24',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Isaac Cali wET -QAQC',\n",
-       " '     Filename: Isaac_Cali_wET__QAQC.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 17:34',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Barry Cali wET',\n",
-       " '     Filename: Barry_Cali_wET.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 17:35',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Aug2016 Val (Gustav)',\n",
-       " '     Filename: Aug2016_Val__Gustav_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 18:11',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Barry Vali (Gustav)',\n",
-       " '     Filename: Barry_Vali__Gustav_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 18:12',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Isaac Vali (Gustav)',\n",
-       " '     Filename: Isaac_Vali__Gustav_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 18:17',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Aug2016 Vali (Katrina)',\n",
-       " '     Filename: Aug2016_Vali__Katrina_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 25 January 2021',\n",
-       " '     Last Modified Time: 21:24',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Barry Vali (Katrina)',\n",
-       " '     Filename: Barry_Vali__Katrina_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 25 January 2021',\n",
-       " '     Last Modified Time: 21:24',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Isaac Vali (Katrina)',\n",
-       " '     Filename: Isaac_Vali__Katrina_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 18:27',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Consensus (Generic)',\n",
-       " '     Filename: Consensus__Generic_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 15 September 2022',\n",
-       " '     Last Modified Time: 17:22',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Basin: Consensus (March 2016)',\n",
-       " '     Filename: Consensus__March_2016_.basin',\n",
-       " '     Description: ',\n",
-       " '     Last Modified Date: 12 January 2021',\n",
-       " '     Last Modified Time: 19:41',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: Aug2016',\n",
-       " '     FileName: Aug2016.control',\n",
-       " '     Description: Flood of August 2016',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: Barry',\n",
-       " '     FileName: Barry.control',\n",
-       " '     Description: Hurricane Barry',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: Gustav',\n",
-       " '     FileName: Gustav.control',\n",
-       " '     Description: Hurricanes Gustav and Ike',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: Isaac',\n",
-       " '     FileName: Isaac.control',\n",
-       " '     Description: Hurricane Isaac',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: Katrina',\n",
-       " '     FileName: Katrina.control',\n",
-       " '     Description: Hurricane Katrina',\n",
-       " 'End:',\n",
-       " '',\n",
-       " 'Control: March 2016',\n",
-       " '     FileName: March_2016.control',\n",
-       " '     Description: March 2016',\n",
-       " 'End:',\n",
-       " '']"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import yaml\n",
+    "import os\n",
+    "import glob\n",
+    "import json\n",
+    "from datetime import datetime\n",
+    "\n",
+    "prj = \"Z:/Amite/Amite_LWI/Models/Amite_HMS/Amite_HMS.hms\"\n",
+    "prj_dir, prj_file_tail = os.path.split(prj)\n",
+    "prj_name = prj_file_tail.split(\".\")[0]\n",
+    "\n",
     "with open(\"Z:/Amite/Amite_LWI/Models/Amite_HMS/Amite_HMS.hms\", \"r\") as f:\n",
     "     lines = f.readlines()\n",
     "lines = [s.strip('\\n') for s in lines]\n",
-    "lines"
+    "# lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[['Project: Amite HMS',\n",
-       "  '     Description: Includes main models from TWIF Amite Study Jan112021',\n",
-       "  '     Version: 4.10',\n",
-       "  '     Filepath Separator: \\\\',\n",
-       "  '     DSS File Name: Amite_HMS.dss',\n",
-       "  '     Time Zone ID: America/Chicago'],\n",
-       " ['Precipitation: Specified Hyetographs',\n",
-       "  '     Filename: Specified_Hyetographs.met',\n",
-       "  '     Description: Processed from Stage IV Gridded Data',\n",
-       "  '     Last Modified Date: 13 January 2023',\n",
-       "  '     Last Modified Time: 16:49'],\n",
-       " ['Basin: Aug2016 Cali wET',\n",
-       "  '     Filename: Aug2016_Cali_wET.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2023',\n",
-       "  '     Last Modified Time: 17:24'],\n",
-       " ['Basin: Isaac Cali wET -QAQC',\n",
-       "  '     Filename: Isaac_Cali_wET__QAQC.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 17:34'],\n",
-       " ['Basin: Barry Cali wET',\n",
-       "  '     Filename: Barry_Cali_wET.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 17:35'],\n",
-       " ['Basin: Aug2016 Val (Gustav)',\n",
-       "  '     Filename: Aug2016_Val__Gustav_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 18:11'],\n",
-       " ['Basin: Barry Vali (Gustav)',\n",
-       "  '     Filename: Barry_Vali__Gustav_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 18:12'],\n",
-       " ['Basin: Isaac Vali (Gustav)',\n",
-       "  '     Filename: Isaac_Vali__Gustav_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 18:17'],\n",
-       " ['Basin: Aug2016 Vali (Katrina)',\n",
-       "  '     Filename: Aug2016_Vali__Katrina_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 25 January 2021',\n",
-       "  '     Last Modified Time: 21:24'],\n",
-       " ['Basin: Barry Vali (Katrina)',\n",
-       "  '     Filename: Barry_Vali__Katrina_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 25 January 2021',\n",
-       "  '     Last Modified Time: 21:24'],\n",
-       " ['Basin: Isaac Vali (Katrina)',\n",
-       "  '     Filename: Isaac_Vali__Katrina_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 18:27'],\n",
-       " ['Basin: Consensus (Generic)',\n",
-       "  '     Filename: Consensus__Generic_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 15 September 2022',\n",
-       "  '     Last Modified Time: 17:22'],\n",
-       " ['Basin: Consensus (March 2016)',\n",
-       "  '     Filename: Consensus__March_2016_.basin',\n",
-       "  '     Description: ',\n",
-       "  '     Last Modified Date: 12 January 2021',\n",
-       "  '     Last Modified Time: 19:41'],\n",
-       " ['Control: Aug2016',\n",
-       "  '     FileName: Aug2016.control',\n",
-       "  '     Description: Flood of August 2016'],\n",
-       " ['Control: Barry',\n",
-       "  '     FileName: Barry.control',\n",
-       "  '     Description: Hurricane Barry'],\n",
-       " ['Control: Gustav',\n",
-       "  '     FileName: Gustav.control',\n",
-       "  '     Description: Hurricanes Gustav and Ike'],\n",
-       " ['Control: Isaac',\n",
-       "  '     FileName: Isaac.control',\n",
-       "  '     Description: Hurricane Isaac'],\n",
-       " ['Control: Katrina',\n",
-       "  '     FileName: Katrina.control',\n",
-       "  '     Description: Hurricane Katrina'],\n",
-       " ['Control: March 2016',\n",
-       "  '     FileName: March_2016.control',\n",
-       "  '     Description: March 2016']]"
-      ]
-     },
-     "execution_count": 33,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import copy\n",
     "keyValueList = copy.deepcopy(lines)  \n",
@@ -258,7 +41,7 @@
     "                else:\n",
     "                        nestList.append(lines[nest_start:i])\n",
     "                nest_start = i+1\n",
-    "nestList\n",
+    "# nestList\n",
     "\n"
    ]
   },
@@ -289,37 +72,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Aug2016.control\n",
-      "Barry.control\n",
-      "Gustav.control\n",
-      "Isaac.control\n",
-      "Katrina.control\n",
-      "March_2016.control\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "{'Control Files': {' Aug2016': {'File Name': 'Aug2016.control',\n",
-       "   'Description': 'Flood of August 2016'},\n",
-       "  ' Barry': {'File Name': 'Barry.control', 'Description': 'Hurricane Barry'},\n",
-       "  ' Gustav': {'File Name': 'Gustav.control',\n",
-       "   'Description': 'Hurricanes Gustav and Ike'},\n",
-       "  ' Isaac': {'File Name': 'Isaac.control', 'Description': 'Hurricane Isaac'},\n",
-       "  ' Katrina': {'File Name': 'Katrina.control',\n",
-       "   'Description': 'Hurricane Katrina'},\n",
-       "  ' March 2016': {'File Name': 'March_2016.control',\n",
-       "   'Description': 'March 2016'}}}"
+       "dict_keys(['Control Files', 'Basin', 'Precipitaion', 'Project'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,22 +90,158 @@
     "# Create a dictionary based on keys using the unique headers with values of Title, Filename, and Description\n",
     "kv = {}\n",
     "kv['Control Files'] = {}\n",
+    "kv['Basin'] = {}\n",
+    "kv['Precipitaion'] = {}\n",
+    "headers_with_same_parsing = ['Control', 'Basin', 'Precipitation']\n",
+    "\n",
     "for subList in nestList:\n",
     "    header = subList[0].split(\":\")[0]\n",
     "    title = subList[0].split(\":\")[1]\n",
     "    find_str = 'Description'\n",
-    "    # print ([s for s in subList if find_str in s])\n",
     "    description = [s for s in subList if find_str in s][0].split(\":\")[1:][0].strip()\n",
-    "    if header == 'Control':\n",
-    "        find_str = 'FileName'\n",
-    "        # print ([s for s in subList if find_str in s])\n",
+    "\n",
+    "    if header == 'Project':\n",
+    "        find_str = 'File Name'\n",
     "        filename = [s for s in subList if find_str in s][0].split(\":\")[1:][0].strip()\n",
-    "        print (filename)\n",
-    "        kv['Control Files'][title] = {\n",
+    "        kv['Project'] = {\n",
+    "            'Title': title,\n",
+    "            'Project Output DSS File': filename,\n",
+    "            'Description': description\n",
+    "        }\n",
+    "    \n",
+    "    if any(header == i for i in headers_with_same_parsing):\n",
+    "        find_str = 'filename'\n",
+    "        filename = [s for s in subList if find_str in s.lower()][0].split(\":\")[1:][0].strip()\n",
+    "        kv['Project'][title] = {\n",
     "            'File Name': filename,\n",
     "            'Description': description\n",
     "        }\n",
-    "kv"
+    "\n",
+    "kv.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.access',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.dss',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.gage',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.hms',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.log',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.out',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.pdata',\n",
+       " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.run']"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import glob, os\n",
+    "# prj_name = kv['Project']['Title']\n",
+    "# Get project files\n",
+    "prj_files_List = []\n",
+    "\n",
+    "for pFile in glob.glob(rf'{prj_dir}/{prj_name}.*'):\n",
+    "        prj_files_List.append(pFile)\n",
+    "\n",
+    "prj_files_List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\Amite_HMS_TimeSeries.dss',\n",
+       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\rainfall_stageIV.dss',\n",
+       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\Specified_Hyetographs.dss',\n",
+       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\USGS_observed.dss']"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add application_date from prj_file modified date\n",
+    "modTimeUnix = os.path.getmtime(prj) \n",
+    "kv['application_date'] = datetime.fromtimestamp(modTimeUnix).strftime('%Y-%m-%d')\n",
+    "\n",
+    "# if args.dss, get dss input files\n",
+    "input_dss_dir = r\"Z:\\Amite\\Amite_LWI\\Models\\Amite_HMS\\data\"\n",
+    "dss_files_List = []\n",
+    "for pFile in glob.glob(rf'{input_dss_dir}/*.dss'):\n",
+    "        dss_files_List.append(pFile)\n",
+    "\n",
+    "dss_files_List"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open the Json template, del unnecessary keys, update, add, export \n",
+    "\n",
+    "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\hms_model_application.json\", 'r') as f:\n",
+    "            model_template_json = json.load(f)\n",
+    "# model_template_json\n",
+    "# keys to drop from json template\n",
+    "drop_keys = ['_id', 'linked_resources', 'common_parameters', 'common_software_version', 'authors', \n",
+    "'spatial_extent_resolved', 'spatial_valid_extent_resolved', 'temporal_extent', 'temporal_resolution', 'spatial_valid_extent', 'common_files_details']\n",
+    "for key in drop_keys:\n",
+    "    del model_template_json[key]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# set basic keywords\n",
+    "model_template_json['keywords'] = ['hec-hms','hec','hms','hydrology','model','lwi']\n",
+    "\n",
+    "# common_files_details[]\n",
+    "model_template_json['common_files_details'] = []\n",
+    "model_template_json['common_files_details'].append(\n",
+    "    {\n",
+    "        \"description\": \"The HMS Project File\",\n",
+    "        \"location\": prj_file_tail,\n",
+    "        \"source_dataset\": None,\n",
+    "        \"title\": \"Project File\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"There may be multiple basins in the HMS model project\",\n",
+    "        \"location\": f\"{prj_dir}/*.basin\",\n",
+    "        \"source_dataset\": None,\n",
+    "        \"title\": \"Basin Files\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"There may be multiple Meteorological Models\",\n",
+    "        \"location\": f\"{prj_dir}/*.met\",\n",
+    "        \"source_dataset\": None,\n",
+    "        \"title\": \"Meteorological Model Files\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"description\": \"There may be multiple control specifications.\",\n",
+    "        \"location\": f\"{prj_dir}/*.control\",\n",
+    "        \"source_dataset\": None,\n",
+    "        \"title\": \"Control Specification Files\"\n",
+    "    },\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Map kv dictionary to the model application json\n",
+    "# application_date, spatial_extent[0], common_files_details[..], purpose, description, title"
    ]
   }
  ],
