dev hms model app parsing completed. TODO: sim parsing.

--- a/dev/hms/hms_parser.ipynb
+++ b/dev/hms/hms_parser.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
        "['Control', 'Project', 'Basin', 'Precipitation']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +81,7 @@
        "dict_keys(['Control Files', 'Basin', 'Precipitaion', 'Project'])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
        " 'Z:/Amite/Amite_LWI/Models/Amite_HMS\\\\Amite_HMS.run']"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,19 +157,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\Amite_HMS_TimeSeries.dss',\n",
-       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\rainfall_stageIV.dss',\n",
-       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\Specified_Hyetographs.dss',\n",
-       " 'Z:\\\\Amite\\\\Amite_LWI\\\\Models\\\\Amite_HMS\\\\data\\\\USGS_observed.dss']"
+       "[{'description': 'Input DSS File ',\n",
+       "  'location': 'data/Amite_HMS_TimeSeries.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'Amite_HMS_TimeSeries'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/rainfall_stageIV.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'rainfall_stageIV'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/Specified_Hyetographs.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'Specified_Hyetographs'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/USGS_observed.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'USGS_observed'}]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,27 +193,84 @@
     "\n",
     "# if args.dss, get dss input files\n",
     "input_dss_dir = r\"Z:\\Amite\\Amite_LWI\\Models\\Amite_HMS\\data\"\n",
-    "dss_files_List = []\n",
+    "dss_files_list = []\n",
     "for pFile in glob.glob(rf'{input_dss_dir}/*.dss'):\n",
-    "        dss_files_List.append(pFile)\n",
+    "        dss_files_list.append(pFile)\n",
     "\n",
-    "dss_files_List"
+    "# dss_files_list\n",
+    "dss_common_files_input = []\n",
+    "if len(dss_files_list)>0:\n",
+    "        for f in dss_files_list:\n",
+    "                head, tail = os.path.split(f)\n",
+    "                dss_title = tail.split(\".\")[0]\n",
+    "                dss_common_files_input.append(\n",
+    "                        {\n",
+    "                                \"description\": \"Input DSS File \",\n",
+    "                                \"location\": f'data/{tail}',\n",
+    "                                \"source_dataset\": None,\n",
+    "                                \"title\": dss_title\n",
+    "                        },\n",
+    "                )\n",
+    "dss_common_files_input"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 100,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[{'description': 'The HMS Project File',\n",
+       "   'location': 'Amite_HMS.hms',\n",
+       "   'source_dataset': None,\n",
+       "   'title': 'Project File'},\n",
+       "  {'description': 'There may be multiple basins in the HMS model project',\n",
+       "   'location': 'Z:/Amite/Amite_LWI/Models/Amite_HMS/*.basin',\n",
+       "   'source_dataset': None,\n",
+       "   'title': 'Basin Files'},\n",
+       "  {'description': 'There may be multiple Meteorological Models',\n",
+       "   'location': 'Z:/Amite/Amite_LWI/Models/Amite_HMS/*.met',\n",
+       "   'source_dataset': None,\n",
+       "   'title': 'Meteorological Model Files'},\n",
+       "  {'description': 'There may be multiple control specifications.',\n",
+       "   'location': 'Z:/Amite/Amite_LWI/Models/Amite_HMS/*.control',\n",
+       "   'source_dataset': None,\n",
+       "   'title': 'Control Specification Files'}],\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/Amite_HMS_TimeSeries.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'Amite_HMS_TimeSeries'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/rainfall_stageIV.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'rainfall_stageIV'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/Specified_Hyetographs.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'Specified_Hyetographs'},\n",
+       " {'description': 'Input DSS File ',\n",
+       "  'location': 'data/USGS_observed.dss',\n",
+       "  'source_dataset': None,\n",
+       "  'title': 'USGS_observed'}]"
+      ]
+     },
+     "execution_count": 100,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# open the Json template, del unnecessary keys, update, add, export \n",
+    "# open the model application Json template, del unnecessary keys, update, add, export \n",
     "\n",
     "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\hms_model_application.json\", 'r') as f:\n",
     "            model_template_json = json.load(f)\n",
     "# model_template_json\n",
     "# keys to drop from json template\n",
     "drop_keys = ['_id', 'linked_resources', 'common_parameters', 'common_software_version', 'authors', \n",
-    "'spatial_extent_resolved', 'spatial_valid_extent_resolved', 'temporal_extent', 'temporal_resolution', 'spatial_valid_extent', 'common_files_details']\n",
+    "'spatial_extent_resolved', 'spatial_valid_extent_resolved', 'temporal_extent', 'temporal_resolution', \n",
+    "'spatial_valid_extent', 'common_files_details', 'grid']\n",
     "for key in drop_keys:\n",
     "    del model_template_json[key]\n",
     "\n",
@@ -210,10 +279,14 @@
     "# set basic keywords\n",
     "model_template_json['keywords'] = ['hec-hms','hec','hms','hydrology','model','lwi']\n",
     "\n",
+    "model_template_json['purpose'] = kv['Project']['Description']\n",
+    "model_template_json['description'] = kv['Project']['Description']\n",
+    "model_template_json['title'] = f\"{kv['Project']['Title']} HEC-HMS Model\"\n",
+    "\n",
     "# common_files_details[]\n",
     "model_template_json['common_files_details'] = []\n",
     "model_template_json['common_files_details'].append(\n",
-    "    {\n",
+    "    [{\n",
     "        \"description\": \"The HMS Project File\",\n",
     "        \"location\": prj_file_tail,\n",
     "        \"source_dataset\": None,\n",
@@ -236,12 +309,52 @@
     "        \"location\": f\"{prj_dir}/*.control\",\n",
     "        \"source_dataset\": None,\n",
     "        \"title\": \"Control Specification Files\"\n",
-    "    },\n",
+    "    }]\n",
     ")\n",
-    "\n",
-    "\n",
+    "model_template_json['common_files_details'].extend(dss_common_files_input)\n",
+    "model_template_json['common_files_details']\n",
     "# Map kv dictionary to the model application json\n",
     "# application_date, spatial_extent[0], common_files_details[..], purpose, description, title"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# output model application json\n",
+    "output_prj_json = f'{prj_name}_model_application.json'\n",
+    "with open(output_prj_json, \"w\") as outfile:\n",
+    "    json.dump(model_template_json, outfile)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# open the simulation Json template, del unnecessary keys, update, add, export\n",
+    "\n",
+    "with open(r\"C:\\py\\hec_meta_extract\\example\\input\\json\\hms_simulation.json\", 'r') as f:\n",
+    "            sim_json = json.load(f)\n",
+    "# model_template_json\n",
+    "# keys to drop from json template\n",
+    "drop_keys = ['_id', 'linked_resources', 'common_parameters', 'common_software_version', 'authors', \n",
+    "'spatial_extent_resolved', 'spatial_valid_extent_resolved', 'temporal_extent', 'temporal_resolution', \n",
+    "'spatial_valid_extent', 'common_files_details', 'grid']\n",
+    "for key in drop_keys:\n",
+    "    del sim_json[key]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# set basic keywords\n",
+    "sim_json['keywords'] = ['hec-hms','hec','hms','hydrology','model','lwi']\n",
+    "\n",
+    "sim_json['purpose'] = kv['Project']['Description']\n",
+    "sim_json['description'] = kv['Project']['Description']\n",
+    "sim_json['title'] = f\"{kv['Project']['Title']} HEC-HMS Model\""
    ]
   }
  ],
